fix arr on tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -832,7 +832,6 @@ input:focus {
   display: block; }
 .header-nav > li.expand > a::after {
   content: url("https://assets.phalconphp.com/phalcon/images/svg/arrow.svg");
-  color: #fff;
   position: relative;
   top: -2px;
   margin-left: 5px; }
@@ -1122,6 +1121,8 @@ input:focus {
   height: 22px; }
 
 @media (min-width: 768px) and (max-width: 1023px) {
+  .header-nav > li.expand > a::after {
+    top: 0; }
   .header {
     height: 66px;
     padding: 13px 0;
